AtCoder/ABC/097/C/out
main.cpp:35:17: error: no matching constructor for initialization of 'set<string>' (aka 'set<basic_string<char, char_traits<char>, allocator<char> > >')
  set< string > subs(comparator);
                ^    ~~~~~~~~~~
/Library/Developer/CommandLineTools/usr/bin/../include/c++/v1/set:438:14: note: candidate constructor not viable: no known conversion from 'bool (const string &, const string &)' (aka 'bool (const basic_string<char, char_traits<char>, allocator<char> > &, const basic_string<char, char_traits<char>, allocator<char> > &)') to 'const value_compare' (aka 'const std::__1::less<std::__1::basic_string<char> >') for 1st argument
    explicit set(const value_compare& __comp)
             ^
/Library/Developer/CommandLineTools/usr/bin/../include/c++/v1/set:473:5: note: candidate constructor not viable: no known conversion from 'bool (const string &, const string &)' (aka 'bool (const basic_string<char, char_traits<char>, allocator<char> > &, const basic_string<char, char_traits<char>, allocator<char> > &)') to 'const std::__1::set<std::__1::basic_string<char>, std::__1::less<std::__1::basic_string<char> >, std::__1::allocator<std::__1::basic_string<char> > >' for 1st argument
    set(const set& __s)
    ^
/Library/Developer/CommandLineTools/usr/bin/../include/c++/v1/set:488:5: note: candidate constructor not viable: no known conversion from 'bool (const string &, const string &)' (aka 'bool (const basic_string<char, char_traits<char>, allocator<char> > &, const basic_string<char, char_traits<char>, allocator<char> > &)') to 'std::__1::set<std::__1::basic_string<char>, std::__1::less<std::__1::basic_string<char> >, std::__1::allocator<std::__1::basic_string<char> > >' for 1st argument
    set(set&& __s)
    ^
/Library/Developer/CommandLineTools/usr/bin/../include/c++/v1/set:494:14: note: candidate constructor not viable: no known conversion from 'bool (const string &, const string &)' (aka 'bool (const basic_string<char, char_traits<char>, allocator<char> > &, const basic_string<char, char_traits<char>, allocator<char> > &)') to 'const allocator_type' (aka 'const std::__1::allocator<std::__1::basic_string<char> >') for 1st argument
    explicit set(const allocator_type& __a)
             ^
/Library/Developer/CommandLineTools/usr/bin/../include/c++/v1/set:510:5: note: candidate constructor not viable: no known conversion from 'bool (const string &, const string &)' (aka 'bool (const basic_string<char, char_traits<char>, allocator<char> > &, const basic_string<char, char_traits<char>, allocator<char> > &)') to 'initializer_list<value_type>' (aka 'initializer_list<std::__1::basic_string<char> >') for 1st argument
    set(initializer_list<value_type> __il, const value_compare& __comp = value_compare())
    ^
/Library/Developer/CommandLineTools/usr/bin/../include/c++/v1/set:449:9: note: candidate constructor template not viable: requires at least 2 arguments, but 1 was provided
        set(_InputIterator __f, _InputIterator __l,
        ^
/Library/Developer/CommandLineTools/usr/bin/../include/c++/v1/set:458:9: note: candidate constructor template not viable: requires 4 arguments, but 1 was provided
        set(_InputIterator __f, _InputIterator __l, const value_compare& __comp,
        ^
/Library/Developer/CommandLineTools/usr/bin/../include/c++/v1/set:468:9: note: candidate constructor template not viable: requires 3 arguments, but 1 was provided
        set(_InputIterator __f, _InputIterator __l, const allocator_type& __a)
        ^
/Library/Developer/CommandLineTools/usr/bin/../include/c++/v1/set:430:5: note: candidate constructor not viable: requires 0 arguments, but 1 was provided
    set()
    ^
/Library/Developer/CommandLineTools/usr/bin/../include/c++/v1/set:445:14: note: candidate constructor not viable: requires 2 arguments, but 1 was provided
    explicit set(const value_compare& __comp, const allocator_type& __a)
             ^
/Library/Developer/CommandLineTools/usr/bin/../include/c++/v1/set:498:5: note: candidate constructor not viable: requires 2 arguments, but 1 was provided
    set(const set& __s, const allocator_type& __a)
    ^
/Library/Developer/CommandLineTools/usr/bin/../include/c++/v1/set:505:5: note: candidate constructor not viable: requires 2 arguments, but 1 was provided
    set(set&& __s, const allocator_type& __a);
    ^
/Library/Developer/CommandLineTools/usr/bin/../include/c++/v1/set:526:5: note: candidate constructor not viable: requires 2 arguments, but 1 was provided
    set(initializer_list<value_type> __il, const allocator_type& __a)
    ^
/Library/Developer/CommandLineTools/usr/bin/../include/c++/v1/set:517:5: note: candidate constructor not viable: requires 3 arguments, but 1 was provided
    set(initializer_list<value_type> __il, const value_compare& __comp,
    ^
1 error generated.
